--- a/ProjectManagementSystem/Views/Project/Index.cshtml
+++ b/ProjectManagementSystem/Views/Project/Index.cshtml
@@ -94,7 +94,7 @@
                                         </div>
                                         <div class="row mt-3">
                                             <div class="col-md-3">
-                                                <a asp-action="ProjectDetail" asp-route-id="@project.Id" class="btn btn-outline-primary w-100">详情</a>
+                                                <a asp-action="ProjectDetail" asp-controller="Project" asp-route-id="@project.Id" class="btn btn-outline-primary w-100">详情</a>
                                             </div>
                                             <div class="col-md-3 offset-6">
                                                 <form asp-action="DeleteProject" asp-route-id="@project.Id" onsubmit="return confirm('确认删除?')">
