--- a/ProjectManagementSystem/Views/Project/ProjectDetail.cshtml
+++ b/ProjectManagementSystem/Views/Project/ProjectDetail.cshtml
@@ -123,6 +123,12 @@
                 <button class="nav-link active" id="look-tab" data-bs-toggle="tab" data-bs-target="#bordered-looks" type="button" role="tab" aria-controls="home" aria-selected="true">总览</button>
             </li>
             <li class="nav-item" role="presentation">
+                <button class="nav-link" id="notice-tab" data-bs-toggle="tab" data-bs-target="#bordered-notices" type="button" role="tab" aria-controls="home" aria-selected="true">通知</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="chat-tab" data-bs-toggle="tab" data-bs-target="#bordered-chats" type="button" role="tab" aria-controls="home" aria-selected="true">交流</button>
+            </li>
+            <li class="nav-item" role="presentation">
                 <button class="nav-link" id="mission-tab" data-bs-toggle="tab" data-bs-target="#bordered-missions" type="button" role="tab" aria-controls="home" aria-selected="true">任务</button>
             </li>
             <li class="nav-item" role="presentation">
@@ -132,10 +138,16 @@
                 <button class="nav-link" id="defect-tab" data-bs-toggle="tab" data-bs-target="#bordered-defects" type="button" role="tab" aria-controls="home" aria-selected="true">缺陷</button>
             </li>
             <li class="nav-item" role="presentation">
+                <button class="nav-link" id="check-tab" data-bs-toggle="tab" data-bs-target="#bordered-checks" type="button" role="tab" aria-controls="home" aria-selected="true">审核</button>
+            </li>
+            <li class="nav-item" role="presentation">
                 <button class="nav-link" id="book-tab" data-bs-toggle="tab" data-bs-target="#bordered-books" type="button" role="tab" aria-controls="home" aria-selected="true">文档</button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="resource-tab" data-bs-toggle="tab" data-bs-target="#bordered-resources" type="button" role="tab" aria-controls="home" aria-selected="true">资源</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="fund-tab" data-bs-toggle="tab" data-bs-target="#bordered-funds" type="button" role="tab" aria-controls="home" aria-selected="true">资金</button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="user-tab" data-bs-toggle="tab" data-bs-target="#bordered-users" type="button" role="tab" aria-controls="profile" aria-selected="false">人员</button>
@@ -190,6 +202,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="tab-pane fade" id="bordered-notices" role="tabpanel" aria-labelledby="notice-tab">
+            </div>
+            <div class="tab-pane fade" id="bordered-chats" role="tabpanel" aria-labelledby="chat-tab">
             </div>
             <div class="tab-pane fade" id="bordered-missions" role="tabpanel" aria-labelledby="mission-tab">
                 <div class="container">
@@ -991,6 +1007,8 @@
 
                 </div>
             </div>
+            <div class="tab-pane fade" id="bordered-checks" role="tabpanel" aria-labelledby="check-tab">
+            </div>
             <div class="tab-pane fade" id="bordered-books" role="tabpanel" aria-labelledby="book-tab">
                 <div class="row">
                     <div class="text-end">
@@ -1245,6 +1263,8 @@
                         </div>
                     </section>
                 </div>
+            </div>
+            <div class="tab-pane fade" id="bordered-funds" role="tabpanel" aria-labelledby="fund-tab">
             </div>
             <div class="tab-pane fade" id="bordered-users" role="tabpanel" aria-labelledby="user-tab">
                 <div class="container">
