--- a/ProjectManagementSystem/Views/Book/EditBook.cshtml
+++ b/ProjectManagementSystem/Views/Book/EditBook.cshtml
@@ -21,7 +21,7 @@
                 <input asp-for="@Model.CoverImage" type="file" class="form-control" placeholder="输入封面">
                 @if (!string.IsNullOrEmpty(Model.CoverImagePath))
                 {
-                    <img src="@Model.CoverImagePath" alt="封面图片" class="img-thumbnail mt-2" style="height:200px; width:auto">
+                    <img src="@Model.CoverImagePath" alt="没有封面" class="img-thumbnail mt-2" style="height:200px; width:auto">
                 }
             </div>
         </div>
@@ -40,7 +40,7 @@
         <br>
         <div class="row justify-content-center">
             <div class="col-auto">
-                <a asp-action="" class="btn btn-secondary btn-block">返回</a>
+                <a asp-action="ReturnProjectDetail" asp-controller="Book" asp-route-id="@Model.ProjectId" class="btn btn-secondary btn-block">返回</a>
             </div>
             <div class="col-auto">
                 <button type="submit" class="btn btn-primary btn-block">保存</button>
