--- a/ProjectManagementSystem/Views/Shared/_Layout.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_Layout.cshtml
@@ -173,7 +173,7 @@
 
 @{ 
     string[] userRoutes = { "User", "Role" };
-    string[] projectRoutes = { "Project" };
+    string[] projectRoutes = { "Project","Risk","Defect","Book","Resource" };
     string[] otherRoutes = { "Department", "Position" };
 }
 
